Futbol Brasil: se valida eventos en el menu

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -33,9 +33,11 @@
     <script src="cordova.js"></script>
 </head>
 
-<body class="{{ contentClass }}" ng-controller="MainCtrl" style="position: fixed;"
+<!--body class="{{ contentClass }}" ng-controller="MainCtrl" style="position: fixed;"
       ng-swipe-right="prevPage()"
-      ng-swipe-left="nextPage()">
+      ng-swipe-left="nextPage()"-->
+
+<body class="{{ contentClass }}" ng-controller="MainCtrl" style="position: fixed;">
 
 <div id="fb-root"></div>
 
