--- a/ExtremeSports/cordova-web/app/index.html
+++ b/ExtremeSports/cordova-web/app/index.html
@@ -131,6 +131,7 @@
 <script src="modules/core/services/cordova-device.js"></script>
 <script src="modules/core/services/domain.js"></script>
 <script src="modules/core/services/facebook-manager.js"></script>
+<script src="modules/core/services/gallery.js"></script>
 <script src="modules/core/services/i-scroll.js"></script>
 <script src="modules/core/services/i18n.js"></script>
 <script src="modules/core/services/moment.js"></script>
@@ -141,6 +142,7 @@
 <script src="modules/core/services/upstream.js"></script>
 <script src="modules/core/services/web-manager.js"></script>
 <script src="modules/core/directives/hc-focus.js"></script>
+<script src="modules/core/directives/hc-gallery-post.js"></script>
 <script src="modules/core/directives/hc-news-post.js"></script>
 <script src="modules/core/directives/menu-item.js"></script>
 <script src="modules/core/directives/menu-sub-item.js"></script>
