EXTREME_SPORTS: Funcionalidades para Prototipo: - Auth (Login /Register/Logout) - News - Gallery - Favorites (Solo listar Atletas y Categorias) - Settings

--- a/ExtremeSports/cordova-web/app/index.html
+++ b/ExtremeSports/cordova-web/app/index.html
@@ -147,6 +147,7 @@
 <script src="modules/core/directives/menu-item.js"></script>
 <script src="modules/core/directives/menu-sub-item.js"></script>
 <script src="modules/core/directives/menu.js"></script>
+<script src="modules/core/controllers/favorites.js"></script>
 <script src="modules/core/controllers/gallery.js"></script>
 <script src="modules/core/controllers/language-selection.js"></script>
 <script src="modules/core/controllers/login.js"></script>
