--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -45,26 +45,26 @@
         <nav class="navbar navbar-default">
             <div class="navbar-header">
                 <header>
-                    <div class="col-xs-2 text-left">
+                    <div class="col-xs-2 text-left" style="height:50px; line-height:50px; ">
                         <i ng-hide="(hideMenuIcon() === true)"
                           ng-class="getDrawerIcon()"
-                          ng-click="onMenuButtonPressed()"></i>
+                          ng-click="onMenuButtonPressed()" style="font-size:2em; vertical-align: middle;"></i>
                     </div>
-                    <div class="col-xs-8 text-center">
-                        <span class="drawer-title" ng-cloak>
+                    <div class="col-xs-8 text-center"style="height:50px; line-height:50px; ">
+                        <span class="drawer-title" ng-cloak style="vertical-align: middle;">
                             {{sectionTranslation}}
                         </span>
                     </div>
-                    <div class="col-xs-2">
+                    <div class="col-xs-2" style="height:50px; line-height:50px; ">
 
                       <i class="icon drawer-icon icon-white"
                          ng-class="getFavoritesClass()"
                          ng-hide="(hideMenuFavorites() === true)"
-                         ng-click="toggleFavorites()"></i>
+                         ng-click="toggleFavorites()" style="font-size:2em; vertical-align: middle;"></i>
 
                       <i class="mdi-navigation-arrow-forward"
                        ng-show="(showMenuForward() === true)"
-                       ng-click="onMain()"></i>
+                       ng-click="onMain()" style=" font-size:2em;vertical-align: middle;"></i>
 
                     </div>
                 </header>
