FUTBOL BRASIL: Actualizaciones varias asociadas a la nueva interfaz de usuario 2

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -37,7 +37,7 @@
       ng-swipe-right="prevPage()"
       ng-swipe-left="nextPage()">
 
-<div id="screen-block" class="hidden" ng-click="clickPage()">&nbsp;</div>
+<!--div id="screen-block" class="hidden" ng-click="clickPage()">&nbsp;</div-->
 <div id="fb-root"></div>
 
 <div class="container-fluid">
