--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -37,7 +37,10 @@
       ng-swipe-right="prevPage()"
       ng-swipe-left="nextPage()">
 
-<!--div id="screen-block" class="hidden" ng-click="clickPage()">&nbsp;</div-->
+<div id="screen-block" class="hidden" ng-click="clickPage()">
+ <h1 style="color:#ffffff;">loading...</h1>
+</div>
+
 <div id="fb-root"></div>
 
 <div class="container-fluid">
@@ -84,7 +87,7 @@
           <div class="col-xs-2">
           </div>
           <div class="col-xs-8 text-right" style="padding-right:0 !important;">
-            <img src="img/tim-01.svg" style="width:45%; heihgt:auto;  margin:10px 0;"/>
+            <img class="h-logo menu" src="img/tim-01.svg" onerror="this.src='img/tim-01.png'" >
           </div>
         </div>
       </div>
@@ -289,6 +292,8 @@
 <script src="modules/core/controllers/settings.js"></script>
 <script src="modules/core/controllers/standings.js"></script>
 <script src="modules/core/controllers/team-selection.js"></script>
+<script src="modules/core/controllers/terms.js"></script>
+<script src="modules/core/controllers/tutorial.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
 
