--- a/ExtremeSports/cordova-web/app/index.html
+++ b/ExtremeSports/cordova-web/app/index.html
@@ -36,33 +36,31 @@
     <div class="navbar-inner">
         <div class="container-fluid">
             <div class="row">
-                <div class="navbar-header">
-                    <div class="col-xs-1 col-xs-pull-1">
+                <div class="col-xs-1">
+                    <div class="navbar-header">
                         <i class="nav-menu-icon mdi-navigation-menu icon-primary"
                            ng-hide="$root.getSection() === 'login'"
                            ng-class="$root.getDrawerIcon()"
                            ng-click="$root.onMenuButtonPressed()"></i>
                     </div>
-                    <div class="col-xs-8 col-xs-push-1">
+                </div>
+                <div class="col-xs-8">
+                    <div>
                         <a class="navbar-brand" href="#">
-                            <img class="img-responsive" src="img/banner.png" alt="Extreme Sports"/>
+                            <img style="height: 100%;" src="img/banner.png" alt="Extreme Sports"/>
                         </a>
                     </div>
-                    <div class="col-xs-1">
-                        <i class="nav-menu-icon mdi-content-add-circle icon-primary"></i>
-                    </div>
+                </div>
+                <div class="col-xs-1">
+                    <i class="nav-menu-icon mdi-content-add-circle icon-primary"></i>
                 </div>
             </div>
         </div>
     </div>
 </header>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-11">
-                <section id="uiview" ui-view></section>
-            </div>
-        </div>
+    <div class="container-fluid">
+        <section id="uiview" ui-view></section>
     </div>
 
     <menu ng-cloak>
