Cambiar la forma como son enviados los datos para el método put desde client-manager Mandar el update del lenguaje

--- a/ExtremeSports/cordova-web/app/index.html
+++ b/ExtremeSports/cordova-web/app/index.html
@@ -44,7 +44,7 @@
                            ng-click="$root.onMenuButtonPressed()"></i>
                     </div>
                     <div class="col-xs-8 col-xs-push-1">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand visible-xs" href="#">
                             <img class="img-responsive" src="img/banner.png" alt="Extreme Sports"/>
                         </a>
                     </div>
