FUTBOL BRASIL: Se comenta la fuente de TIM

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -32,7 +32,7 @@
 
     <script src="cordova.js"></script>
 
-    <style type="text/css" media="screen">
+    <!--style type="text/css" media="screen">
 
       @font-face {
         font-family: TeutonNormal;
@@ -48,7 +48,7 @@
         font-family: TeutonNormal !important;
       }
 
-    </style>
+    </style-->
 
 
 </head>
