--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -32,23 +32,18 @@
 
     <script src="cordova.js"></script>
 
-    <!--style type="text/css" media="screen">
+    <style type="text/css" media="screen">
 
       @font-face {
         font-family: TeutonNormal;
-        src: url(font/TeutonNormal.otf);
-      }
-
-      @font-face {
-        font-family: TeutonNormalBold;
-        src: url(font/TeutonNormal-Bold.otf);
+        src: url(font/teutonnormal-webfont.woff);
       }
 
       body {
         font-family: TeutonNormal !important;
       }
 
-    </style-->
+    </style>
 
 
 </head>
@@ -99,16 +94,6 @@
     <loading></loading>
 
     <menu ng-cloak>
-
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="col-xs-2">
-          </div>
-          <div class="col-xs-8 text-right" style="padding-right:0 !important;">
-            <img class="h-logo menu" src="img/tim-01.svg" onerror="this.src='img/tim-01.png'" >
-          </div>
-        </div>
-      </div>
 
         <menu-item section="prediction" icon="mdi-action-event">
           {{'SECTIONS.BETS' | translate}}
