FUTBOL BRASIL: Lógica de tutorial

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -64,7 +64,7 @@
                     <div class="col-xs-2 text-left" style="height:50px; line-height:50px; ">
                         <i class="drawer-title" ng-hide="(hideMenuIcon() === true)"
                           ng-class="getDrawerIcon()"
-                          ng-click="onMenuButtonPressed()" ></i>
+                          ng-click="onMenuButtonPressed()"></i>
                     </div>
                     <div class="col-xs-8 text-center"style="height:50px; line-height:50px; ">
                         <img class="h-logo" src="img/tim-01.svg" onerror="this.src='img/tim-01.png'" >
@@ -283,6 +283,7 @@
 <script src="modules/core/directives/menu.js"></script>
 <script src="modules/core/directives/my-scroll.js"></script>
 <script src="modules/core/directives/on-last-repeat.js"></script>
+<script src="modules/core/controllers/how-does-it-work.js"></script>
 <script src="modules/core/controllers/language-selection.js"></script>
 <script src="modules/core/controllers/leaderboard.js"></script>
 <script src="modules/core/controllers/login.js"></script>
