--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -67,9 +67,9 @@
                           ng-class="getDrawerIcon()"
                           ng-click="onMenuButtonPressed()"></i>
                     </div>
-                    <div class="col-xs-8 text-center"style="height:50px; line-height:50px; ">
+                    <div class="col-xs-8 text-center h-ellipsis-truncate" style="height:50px; line-height:50px; ">
                         <img class="h-logo" src="img/tim-01.svg" onerror="this.src='img/tim-01.png'" >
-                        <span class="h-title" ng-cloak >
+                        <span class="h-title " ng-cloak >
                             {{sectionTranslation}}
                         </span>
                     </div>
