--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -246,6 +246,7 @@
 <!-- injector:js -->
 <script src="js/pt.js"></script>
 <script src="js/es.js"></script>
+<script src="js/en.js"></script>
 <script src="js/config.js"></script>
 <script src="js/application.js"></script>
 <script src="modules/core/core.js"></script>
