FUTBOL BRASIL: Se controla los iconos menu y back desde el backbutton del device

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -63,7 +63,7 @@
             <div class="navbar-header">
                 <header>
                     <div class="col-xs-2 text-left" style="height:50px; line-height:50px; ">
-                        <i class="drawer-title" ng-hide="(hideMenuIcon() === true)"
+                        <i id="menuIcon" class="drawer-title" ng-hide="(hideMenuIcon() === true)"
                           ng-class="getDrawerIcon()"
                           ng-click="onMenuButtonPressed()"></i>
                     </div>
