--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -148,35 +148,35 @@
     <ng-include src="'modules/core/views/templates/share-modal.html'"></ng-include>
     <ng-include src="'modules/core/views/templates/info-modal.html'"></ng-include>
 
-    <div class="row">
+
         <footer class="footer" ng-hide="isOnUtilitySection()">
-            <div data-section="notistats" class="row"
+            <div data-section="notistats" class="row notistats"
                  ng-class="{active: getSection() === 'notistats', hide: getSection() !== 'notistats'}">
-                <div class="col-xs-2 col-xs-offset-1 option" ui-sref-active="active">
+                <div class="col-xs-15 option" ui-sref-active="active">
                     <a ui-sref="match" class="footer-section">
                         <span class="icon-balon"></span>
                         <span translate>SECTIONS.NOTISTATS.MATCHES</span>
                     </a>
                 </div>
-                <div class="col-xs-2 option" ui-sref-active="active">
+                <div class="col-xs-15 option" ui-sref-active="active">
                     <a ui-sref="standings" class="footer-section">
                         <span class="icon-tabela"></span>
                         <span translate>SECTIONS.NOTISTATS.STANDINGS</span>
                     </a>
                 </div>
-                <div class="col-xs-2 option" ui-sref-active="active" >
+                <div class="col-xs-15 option" ui-sref-active="active" >
                     <a ui-sref="news" class="footer-section">
                         <span class="icon-noticias"></span>
                         <span translate>SECTIONS.NOTISTATS.NEWS</span>
                     </a>
                 </div>
-                <div class="col-xs-2 option" ui-sref-active="active" >
+                <div class="col-xs-15 option" ui-sref-active="active" >
                     <a ui-sref="scorers" class="footer-section">
                         <span class="icon-artilharia"></span>
                         <span translate>SECTIONS.NOTISTATS.SCORERS</span>
                     </a>
                 </div>
-                <div class="col-xs-2 option" ui-sref-active="active" >
+                <div class="col-xs-15 option" ui-sref-active="active" >
                     <a ui-sref="mtm" class="footer-section">
                         <span class="icon-envivo"></span>
                         <span translate>SECTIONS.NOTISTATS.LIVE</span>
@@ -184,7 +184,7 @@
                 </div>
             </div>
 
-            <div data-section="bets" class="row"
+            <div data-section="bets" class="row bets"
                  ng-class="{active: getSection() === 'bets', hide: getSection() !== 'bets'}">
                 <div class="col-xs-3 option" ui-sref-active="active">
                     <a ui-sref="prediction" class="footer-section">
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+
 </div>
 
 <!-- build:js scripts/vendor.js -->
