FUTBOL BRASIL: Programacion inicial del dashboard

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -281,6 +281,7 @@
 <script src="modules/core/directives/menu.js"></script>
 <script src="modules/core/directives/my-scroll.js"></script>
 <script src="modules/core/directives/on-last-repeat.js"></script>
+<script src="modules/core/controllers/dashboard.js"></script>
 <script src="modules/core/controllers/how-does-it-work.js"></script>
 <script src="modules/core/controllers/language-selection.js"></script>
 <script src="modules/core/controllers/leaderboard.js"></script>
