--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8">
-    <title>TIM Palpites</title>
+    <title>COS</title>
 
     <meta name="description" content="">
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes.
@@ -31,19 +31,19 @@
     <!-- endbuild -->
 
     <script src="cordova.js"></script>
-
-    <style type="text/css" media="screen">
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,700italic,400italic&amp;subset=latin-ext" media="all" />
+    <!--style type="text/css" media="screen">
 
       @font-face {
-        font-family: TeutonNormal;
-        src: url(font/teutonnormal-webfont.woff);
+        font-family: Eurostile;
+        src: url(font/Eurostile.otf);
       }
 
       body {
-        font-family: TeutonNormal !important;
+        font-family: Eurostile !important;
       }
 
-    </style>
+    </style-->
 
 
 </head>
