FUTBOL BRASIL: Adaptación l&f de CLARO

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8">
-    <title>TIM Palpites</title>
+    <title>Gurú del Fútbol</title>
 
     <meta name="description" content="">
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes.
@@ -31,17 +31,6 @@
     <!-- endbuild -->
 
     <script src="cordova.js"></script>
-
-    <style type="text/css" media="screen">
-
-      @font-face {
-        font-family: TeutonNormal;
-        src: url(font/teutonnormal-webfont.woff);
-      }
-
-      body {
-        font-family: TeutonNormal !important;
-      }
 
     </style>
 
