Updates de Splash e Imágenes

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8">
-    <title>TIM Palpites</title>
+    <title>Gurú del Fútbol</title>
 
     <meta name="description" content="">
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes.
@@ -68,7 +68,7 @@
                           ng-click="onMenuButtonPressed()"></i>
                     </div>
                     <div class="col-xs-8 text-center h-ellipsis-truncate" style="height:50px; line-height:50px; ">
-                        <img class="h-logo" src="img/tim-01.svg" onerror="this.src='img/tim-01.png'" >
+                        <img class="h-logo" src="img/logo.svg" onerror="this.src='img/logo.png'" >
                         <span class="h-title" ng-cloak ng-bind="sectionTranslation">
                         </span>
                     </div>
