Se actualiza el nombre de la file img del logo

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -32,7 +32,6 @@
 
     <script src="cordova.js"></script>
 
-    </style>
 
 
 </head>
@@ -57,7 +56,7 @@
                           ng-click="onMenuButtonPressed()"></i>
                     </div>
                     <div class="col-xs-8 text-center h-ellipsis-truncate" style="height:50px; line-height:50px; ">
-                        <img class="h-logo" src="img/tim-01.svg" onerror="this.src='img/tim-01.png'" >
+                        <img class="h-logo" src="img/logo.svg" onerror="this.src='img/logo.png'" >
                         <span class="h-title" ng-cloak ng-bind="sectionTranslation">
                         </span>
                     </div>
