Actualización de nombre de archivos de logo y titulo de la app

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8">
-    <title>TIM Palpites</title>
+    <title>Guúr del Fútbol</title>
 
     <meta name="description" content="">
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes.
@@ -32,19 +32,6 @@
 
     <script src="cordova.js"></script>
 
-    <style type="text/css" media="screen">
-
-      @font-face {
-        font-family: TeutonNormal;
-        src: url(font/teutonnormal-webfont.woff);
-      }
-
-      body {
-        font-family: TeutonNormal !important;
-      }
-
-    </style>
-
 
 </head>
 
@@ -68,7 +55,7 @@
                           ng-click="onMenuButtonPressed()"></i>
                     </div>
                     <div class="col-xs-8 text-center h-ellipsis-truncate" style="height:50px; line-height:50px; ">
-                        <img class="h-logo" src="img/tim-01.png"  >
+                        <img class="h-logo" src="img/logo.png"  >
                         <span class="h-title" ng-cloak ng-bind="sectionTranslation">
                         </span>
                     </div>
