FÚTBOL: View orientatation condition

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -96,6 +96,14 @@
 
     <loading></loading>
 
+    <div id="screen-block-landscape" >
+      <div style="position:absolute; top:25%; color:#ffffff;">
+        <i class="mdi-device-screen-lock-rotation" style="font-size:12em;"></i>
+        <h3 translate>MSG_UNAVAILABLE_ORIENTATION</h3>
+      </div>
+    </div>
+
+
     <h-menu>
 
       <menu-item section="prediction" icon="mdi-action-event">
