--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -98,8 +98,8 @@
     <loading></loading>
 
     <div id="screen-block-landscape" >
-      <div style="position:absolute; top:5%; color:#ffffff;">
-        <!--i class="mdi-device-screen-lock-rotation" style="font-size:4em;"></i-->
+      <div style="position:absolute; width:100%; top:5%; color:#ffffff;">
+        <i class="mdi-device-screen-lock-rotation" style="font-size:4em;"></i>
         <h3 translate>MSG_UNAVAILABLE_ORIENTATION</h3>
       </div>
     </div>
