--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -69,7 +69,7 @@
                           ng-click="onMenuButtonPressed()"></i>
                     </div>
                     <div class="col-xs-8 text-center h-ellipsis-truncate" style="height:50px; line-height:50px; ">
-                        <img class="h-logo" src="img/logo.svg" onerror="this.src='img/logo.png'" >
+                        <!--img class="h-logo" src="img/logo.svg" onerror="this.src='img/logo.png'" -->
                         <span class="h-title" ng-cloak ng-bind="sectionTranslation">
                         </span>
                     </div>
