FUTBOL-BRASIL: Se suben archivos para splash en pagina de redireccionamiento

--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -24,6 +24,7 @@
     <!-- injector:css -->
     <link rel="stylesheet" href="styles/animate.css">
     <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="styles/dl.css">
     <link rel="stylesheet" href="styles/iconvault-preview.css">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/media-orientation.css">
