--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -253,6 +253,7 @@
 <script src="lib/angular-translate-loader-url/angular-translate-loader-url.js"></script>
 <script src="lib/iscroll/build/iscroll-probe.js"></script>
 <script src="lib/Flowtype.js/flowtype.js"></script>
+<script src="lib/angular-google-analytics/dist/angular-google-analytics.min.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
 
