PALPITES: Se actualiza l&f para NEXTEL

--- a/FutbolBrasil/futbol-brasil/app/dl.html
+++ b/FutbolBrasil/futbol-brasil/app/dl.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0, maximum-scale=1.0" />
-    <title>Timfutebol redirect</title> 
+    <title>Timfutebol redirect</title>
 
     <script>
     window.onload = function() {
@@ -13,11 +13,11 @@
         setTimeout("window.location = 'http://timfutebol.hecticus.com/';", 1000);
     }
     </script>
-	
+
 </head>
 <body>
     <form action="http://timfutebol.hecticus.com/" target="_blank">
-        <input type="submit" value="tim futebol" />
-    </form> 
+        <input type="submit" value="Nextel futebol" />
+    </form>
 </body>
 </html>
