--- a/FutbolBrasil/futbol-brasil/app/index.html
+++ b/FutbolBrasil/futbol-brasil/app/index.html
@@ -254,6 +254,7 @@
 <script src="lib/iscroll/build/iscroll-probe.js"></script>
 <script src="lib/Flowtype.js/flowtype.js"></script>
 <script src="lib/angular-google-analytics/dist/angular-google-analytics.min.js"></script>
+<script src="lib/angular-easyfb/angular-easyfb.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
 
