Se actualiza el texto de descargar

--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -228,8 +228,9 @@
 		<div id="splash" >
 			<div id="splash-logo" >&nbsp;</div>
 			<div id="splash-caption" >
-				<h1 style="text-align: center; color:#ffffff;">NOTICIAS TVN</h1>
-				<h1 id="download"style="text-align: center; color:#0453B3;">DESCARGAR AQU&Iacute;</h1>
+				<p style="text-align: center; color:#000000;">
+					Estimado usuario, para mejorar la experiencia en l&iacute;nea, tvn ha unificado sus apps.  Este App  ya no ser&aacute; soportado por lo que le pedimos descargue la nueva App de TVN aqu&iacute;:</p>
+				<h1 id="download"style="text-align: center; color:#0453B3;">DESCARGAR</h1>
 			</div>
 			<div id="splash-footer" ><h5 style="text-align: center;">&nbsp;</h5></div>
 		</div>
