--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/transaction.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.min.css">
 		<link rel="stylesheet" type="text/css" href="img/font/iconvault-preview.css">
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 		
 		<title>Noticias TVN</title>
 
